tempfile/derive_builder/tests/compile-fail/vis_conflict.stderr
error: `public` and `vis` cannot be used together
 --> tests/compile-fail/vis_conflict.rs:5:25
  |
5 | #[builder(public, vis = "pub(crate)")]
  |                         ^^^^^^^^^^^^

error: `public` and `private` cannot be used together
  --> tests/compile-fail/vis_conflict.rs:12:48
   |
12 | #[builder(public, vis = "pub(crate)", build_fn(private, public))]
   |                                                ^^^^^^^

error: `public` and `vis` cannot be used together
  --> tests/compile-fail/vis_conflict.rs:12:25
   |
12 | #[builder(public, vis = "pub(crate)", build_fn(private, public))]
   |                         ^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `ExampleBuilder`
  --> tests/compile-fail/vis_conflict.rs:19:5
   |
19 |     ExampleBuilder::default().build();
   |     ^^^^^^^^^^^^^^ use of undeclared type `ExampleBuilder`

error[E0433]: failed to resolve: use of undeclared type `SecondExampleBuilder`
  --> tests/compile-fail/vis_conflict.rs:20:5
   |
20 |     SecondExampleBuilder::default().build();
   |     ^^^^^^^^^^^^^^^^^^^^ use of undeclared type `SecondExampleBuilder`
